--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "css-loader": "^3.0.0",
+        "js-sha256": "^0.9.0",
         "vue": "^2.6.10",
         "vue-router": "^3.0.6",
         "vue-session": "^1.0.0",
